--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11"
-  }
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "start": "nodemon --exec babel-node ./index.js"
+  
 }
