--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node ./index.js"
 
   },
@@ -30,6 +30,6 @@
     "presets": [
       "@babel/preset-env"
     ]
-  },
+  }
   
 }
